Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6641

Release Build Crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 4.6.1
    • 4.6.0
    • None
    • None
    • Samsung PDA:i900BSHI1/BSHI1 PHONE:i900BOHI1 Windows Mobile 6.1 Professional CEOS: 5.2.20270(Build: 20270.1.3.1) CPU: ARM920T PXA312 Memory:97.30 MB
    • 8798b36880d1387d2d27f7fb35ccbf02af6232a0

    Description

      Minimal Qt Application (Qt Creator/New/Qt4 Gui Application) Crashes when i using it's Release version on device

      • Debug version is running on Simulator/Emulator and on the Device also
      • Release version running on Simulator/Emulator but crashes on device

      There was 3 config what I'm tried

      First Qt 4.6.0 LGPL configure.cache:
      -no-qt3support
      -opensource
      -fast
      -platform win32-msvc2008
      -xplatform wincewm50pocket-msvc2008
      -qt-sql-sqlite
      -qt-libjpeg
      -qt-libpng

      Second Qt 4.6.0 LGPL configure.cache:
      -no-qt3support
      -opensource
      -platform win32-msvc2008
      -xplatform wincewm60professional-msvc2008
      -qt-sql-sqlite
      -qt-libjpeg
      -qt-libpng

      Third Qt 4.6.0 LGPL configure.cache:
      -no-qt3support
      -opensource
      -fast
      -platform win32-msvc2005
      -xplatform wincewm60professional-msvc2005
      -qt-sql-sqlite
      -qt-libjpeg
      -qt-libpng

      Qt builds are scuccessfully completed.
      Application build is completed without any Warning or Error messages.

      QMake:
      qmake -tp vc

      In the Enviroment field i'm described a specific environment, but we had to try more mobile platforms with the same result.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            cikkcakk Tamas Domonkos
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes