fix release mode crash in qfont.cpp initFontSubst() on Windows mobile

Since we've disabled LTCG for Windows CE by default, the code in
initFontSubst() crashes on Windows mobile.
Adding the extra const solves this problem.

Task-number: QTBUG-6641
Reviewed-by: ossi
(cherry picked from commit 8798b36880d1387d2d27f7fb35ccbf02af6232a0)