src/gui/text/qfont.cpp
@@ -1780,7 +1780,7 @@ Q_GLOBAL_STATIC(QFontSubst, globalFontSubst)
 static void initFontSubst()
 {
     // default substitutions
-    static const char *initTbl[] = {
+    static const char * const initTbl[] = {
 
 #if defined(Q_WS_X11)
         "arial",        "helvetica",
@@ -1811,7 +1811,6 @@ static void initFontSubst()
         list.append(QString::fromLatin1(initTbl[i+1]));
     }
 }
-
 
 /*!
     Returns the first family name to be used whenever \a familyName is
